<resources>
    <string name="app_name">WenZiTong</string>
    <string name="life_guide">生活烦恼随时拍</string>
    <string name="museum_guide">博物馆随时拍</string>
    <string name="classical_chinese_guide">古文阅读随时拍</string>
    <string name="first_page">首页</string>
    <string name="collect_page">收藏</string>
    <string name="personal_page">个人</string>
    <string name="individuation_word">个性化生僻字</string>
    <string name="photograph">拍照</string>
    <string name="upload">上传</string>
    <string name="newword_book">生词本</string>
    <string name="usecenter">个人中心</string>
    <string name="account">账号</string>
    <string name="history">历史查询记录</string>
    <string name="exit">退出</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="password">密码</string>
    <string name="new_password">新密码</string>
    <string name="input_vertification">输入验证码</string>
    <string name="get_verification">获取验证码</string>
    <string name="register">注册</string>
    <string name="look_as_visitor">随便看看</string>
    <string name="register_login_digits">._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ@</string>
    <string name="account_or_password_error">帐号或密码错误,请重新输入</string>
    <string name="timeout">网络错误，请检查网络</string>
    <string name="sign_in_ok">登录成功</string>
    <string name="input_6to16_password">请输入6~16位密码</string>
    <string name="input_right_email">请输入正确的邮箱地址</string>
    <string name="vercode_empty_error">验证码为空</string>
    <string name="sign_up_ok">注册成功</string>
    <string name="account_exist_error">账号已注册</string>
    <string name="reget_code">重新获取验证码</string>
    <string name="finish">完成</string>
</resources>
