<?xml version="1.0" encoding="utf-8"?>
<!--首页fragment对应的布局-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--标题栏-->
    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="5dp">
        <android.support.v7.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/first_page"/>
    </android.support.design.widget.AppBarLayout>
    <!--中间布局-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/photo_bt"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:text="@string/photograph"
            android:layout_centerVertical="true"/>
        <Button
            android:id="@+id/upload_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:text="@string/upload"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

</LinearLayout>