<?xml version="1.0" encoding="utf-8"?>
<!--个人界面-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--标题栏-->
    <android.support.design.widget.AppBarLayout
        android:id="@+id/personnal_bar"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="5dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/usecenter"/>
    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_below="@id/personnal_bar"
        android:paddingTop="5dp"
        android:scrollbars="vertical"
        android:id="@+id/setting_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">
    <com.example.wenzitong.ui.EmphasisRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="16sp"
            android:text="@string/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/account_in"
            android:text="12345678910"
            android:layout_centerInParent="true"
            android:layout_marginEnd="5dp"
            android:textSize="15sp"/>
        <ImageView
            android:id="@+id/account_in"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/gray_right_arrow"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>
    </com.example.wenzitong.ui.EmphasisRelativeLayout>
    <com.example.wenzitong.ui.EmphasisRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="16sp"
            android:text="@string/history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/gray_right_arrow"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>
    </com.example.wenzitong.ui.EmphasisRelativeLayout>
    <com.example.wenzitong.ui.EmphasisRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="16sp"
            android:text="@string/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/gray_right_arrow"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>
    </com.example.wenzitong.ui.EmphasisRelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>